[gd_scene load_steps=4 format=3 uid="uid://dq6duf1jeu043"]

[ext_resource type="Script" uid="uid://buda6bms8h2l2" path="res://Game/move.gd" id="1_onrkg"]
[ext_resource type="PackedScene" uid="uid://duyn13baadi8m" path="res://Game/tank maker/tank maker.tscn" id="2_hiq6t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hiq6t"]
size = Vector2(68, 64)

[node name="Node2D" type="Node2D"]

[node name="bullets" type="Node2D" parent="."]

[node name="tank" type="CharacterBody2D" parent="."]
collision_mask = 2
script = ExtResource("1_onrkg")

[node name="TankMaker" parent="tank" instance=ExtResource("2_hiq6t")]
unique_name_in_owner = true

[node name="Area2D" type="Area2D" parent="tank" groups=["playerHitbox"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tank/Area2D"]
position = Vector2(-4, 0)
shape = SubResource("RectangleShape2D_hiq6t")

[node name="map collision" type="CollisionShape2D" parent="tank"]
position = Vector2(-4, 0)
shape = SubResource("RectangleShape2D_hiq6t")

[connection signal="visibility_changed" from="tank" to="tank" method="_on_visibility_changed"]
[connection signal="area_entered" from="tank/Area2D" to="tank" method="_on_area_2d_area_entered"]
